--- a/public/beta.html
+++ b/public/beta.html
@@ -438,7 +438,7 @@
             const data = await response.json();
             return data.candidates[0].content.parts[0].text;
         }
-
+ 
         function renderChapter(text) {
             const chapterNum = state.chapters.length;
             const div = document.createElement('div');
@@ -492,6 +492,7 @@
                     // We increase the bar as chunks arrive
                     const progress = Math.min((chunks.length / (text.length / 10)) * 100, 95);
                     barFill.style.width = `${progress}%`;
+                    console.log(audioChunk)
                 });
 
                 stream.on('end', () => {
